--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -12,34 +12,27 @@
     tools:context="com.mike.alex.AccountActivity">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="username"
-        android:id="@+id/account_username"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Fixed amount: "
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:id="@+id/account_fixedAmount"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text=" account_fAmount"
+            android:layout_height="wrap_content"
+            android:text="username"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
-            android:id="@+id/_fAmount"  />
-
-
+        <TextView
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:text="ALEX"
+            android:id="@+id/account_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            />
 
     </LinearLayout>
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -67,12 +60,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reguest loan"
-        android:id="@+id/button1"/>
+        android:id="@+id/account_reg_loan"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="pay loan"
-        android:id="@+id/button2"/>
+        android:id="@+id/account_pay_loan"/>
 
 
 </LinearLayout>
