--- a/app/src/main/res/layout/activity_apply_short.xml
+++ b/app/src/main/res/layout/activity_apply_short.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_applyloan"
+    android:id="@+id/activity_apply_short"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.mike.alex.ApplyloanActivity">
-
+    tools:context="com.mike.alex.ApplyShortActivity">
     <TextView
-        android:text="Enter Amount To apply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/appply_textView3"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
+        android:text="Enter amount between 1000 to 10,000"
+        />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Amount in Ksh"
-        android:ems="10"
-        android:id="@+id/apply_loanAmount" />
-
+        android:hint="amount in kshs"
+        android:id="@+id/apply_short_amount"/>
     <Button
-        android:text="Apply"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/apply_ApplyButton" />
+        android:text="apply"/>
+
 </LinearLayout>
