--- a/app/src/main/res/layout/activity_apply_short.xml
+++ b/app/src/main/res/layout/activity_apply_short.xml
@@ -21,6 +21,7 @@
         android:hint="amount in kshs"
         android:id="@+id/apply_short_amount"/>
     <Button
+        android:id="@+id/apply_short_btn_apply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="apply"/>
