--- a/app/src/main/res/layout/activity_paylong_term.xml
+++ b/app/src/main/res/layout/activity_paylong_term.xml
@@ -21,6 +21,7 @@
         android:hint="amount in kshs"
         android:id="@+id/pay_long_amount"/>
     <Button
+        android:id="@+id/paylong_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="pay "/>
